# VolunteerEvent-Organizer

./: CMakeLists.txt  README.md
Controller/: Controller.cpp  Controller.h
Model/: Event.cpp  Event.h  Volunteer.cpp  Volunteer.h
Repository/JSON/: JSONEventRepository.cpp  JSONVolunteerRepository.cpp
core/: AddEventCommand.h  AddVolunteerCommand.h  RemoveEventCommand.h  RemoveVolunteerCommand.h  UpdateEventCommand.h  UpdateVolunteerCommand.h
tests/: tests.cpp
ui/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
